src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Assigned Case Support</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>New Case Support</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ALE_Amount_Limit__c</fullName>
        <label>ALE Amount Limit</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ALE_Time_Limit_2__c</fullName>
        <formula>Text(Claim__r.ALE_Limit_Time__c)</formula>
        <label>ALE Time Limit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALE_Time_Limit__c</fullName>
        <label>ALE Time Limit</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Term__c</fullName>
        <label>Approved Term</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User Case will be assigned to</description>
        <label>Case Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Comment_Body__c</fullName>
        <label>Case Comment Body</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Comment_Creator__c</fullName>
        <label>Case Comment Creator</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Number_2__c</fullName>
        <formula>Claim__r.Claim__c</formula>
        <label>Claim Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Number__c</fullName>
        <label>Claim Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Link to Claim if available</description>
        <label>Claim</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>$Source.ContactId</field>
                <operation>equals</operation>
                <valueField>Opportunity.Adjuster__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.ContactId</field>
                <operation>equals</operation>
                <valueField>Opportunity.Policyholder__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <formula>Contact.RecordType.Name</formula>
        <label>Contact Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damaged_Property_Address_2__c</fullName>
        <formula>Claim__r.Damaged_Property_Address__c</formula>
        <label>Damaged Property Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damaged_Property_Address__c</fullName>
        <label>Damaged Property Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damaged_Property_City_2__c</fullName>
        <formula>Claim__r.Damaged_Property_City__c</formula>
        <label>Damaged Property City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damaged_Property_City__c</fullName>
        <label>Damaged Property City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damaged_Property_Country_2__c</fullName>
        <formula>Text(Claim__r.Damaged_Property_Country__c)</formula>
        <label>Damaged Property Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damaged_Property_Country__c</fullName>
        <label>Damaged Property Country</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Damaged_Property_State_Province__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>CAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Damaged_Property_State_Province_2__c</fullName>
        <formula>Text(Claim__r.Damaged_Property_State__c)</formula>
        <label>Damaged Property State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damaged_Property_State_Province__c</fullName>
        <label>Damaged Property State/Province</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Damaged_Property_Zip_Postal_Code_2__c</fullName>
        <formula>Claim__r.Damaged_Property_Zip__c</formula>
        <label>Damaged Property Zip/Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damaged_Property_Zip_Postal_Code__c</fullName>
        <label>Damaged Property Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Loss_2__c</fullName>
        <formula>Claim__r.Date_of_Loss__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Loss</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Loss__c</fullName>
        <label>Date of Loss</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monthly_Rental_Amount__c</fullName>
        <label>Policyholder&apos;s Monthly Responsibility</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Adults_2__c</fullName>
        <formula>Text(Claim__r.Number_of_Adults__c)</formula>
        <label>Number of Adults</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Adults__c</fullName>
        <label>Number of Adults</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Children_2__c</fullName>
        <formula>text(Claim__r.Number_of_Children__c)</formula>
        <label>Number of Children</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Children__c</fullName>
        <label>Number of Children</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Pets_2__c</fullName>
        <formula>Text(Claim__r.Number_of_Pets__c)</formula>
        <label>Number of Pets</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Pets__c</fullName>
        <label>Number of Pets</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Placement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Placement</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Claim__c</field>
                <operation>equals</operation>
                <valueField>Placement__c.Opportunity__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Placement__c</referenceTo>
        <relationshipLabel>Cases Custom</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Policy_Holder_First_Name_2__c</fullName>
        <formula>Claim__r.Policyholder__r.FirstName</formula>
        <label>Policy Holder First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Holder_First_Name__c</fullName>
        <label>Policy Holder First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Holder_Last_Name_2__c</fullName>
        <formula>Claim__r.Policyholder__r.LastName</formula>
        <label>Policy Holder Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Holder_Last_Name__c</fullName>
        <label>Policy Holder Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Type_2__c</fullName>
        <formula>Text(Claim__r.Policy_Type__c)</formula>
        <label>Policy Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Type__c</fullName>
        <label>Policy Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Condo</fullName>
                </value>
                <value>
                    <fullName>Homeowner</fullName>
                </value>
                <value>
                    <fullName>Renters </fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Policyholder_Phone_2__c</fullName>
        <formula>Claim__r.Policyholder__r.Phone</formula>
        <label>Policyholder Phone #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policyholder_Phone__c</fullName>
        <label>Policyholder Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Services_Requested__c</fullName>
        <label>Services Requested</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Housing</fullName>
                </value>
                <value>
                    <fullName>FRV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Loss_2__c</fullName>
        <formula>text(Claim__r.Type_of_Loss__c)</formula>
        <label>Type of Loss</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Loss__c</fullName>
        <label>Type of Loss</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CAT</fullName>
                </value>
                <value>
                    <fullName>Fire</fullName>
                </value>
                <value>
                    <fullName>Mold</fullName>
                </value>
                <value>
                    <fullName>Tornado</fullName>
                </value>
                <value>
                    <fullName>Water</fullName>
                </value>
                <value>
                    <fullName>Wind</fullName>
                </value>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Chemical/Pesticides</fullName>
                </value>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>Foundation/Ground Setting</fullName>
                </value>
                <value>
                    <fullName>Heating/Air Conditioning</fullName>
                </value>
                <value>
                    <fullName>Lightning</fullName>
                </value>
                <value>
                    <fullName>Power Surge/Outage</fullName>
                </value>
                <value>
                    <fullName>Sewage</fullName>
                </value>
                <value>
                    <fullName>Smoke Damage</fullName>
                </value>
                <value>
                    <fullName>Theft/Vandalism</fullName>
                </value>
                <value>
                    <fullName>Tree</fullName>
                </value>
                <value>
                    <fullName>Unknown </fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>Claim__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Furniture_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Furniture</label>
        <queue>Furniture</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <recordTypes>
        <fullName>Adjuster_Portal_Connection</fullName>
        <active>true</active>
        <businessProcess>New Case Support</businessProcess>
        <label>Adjuster Portal Connection</label>
    </recordTypes>
    <recordTypes>
        <fullName>Adjuster_Transfer</fullName>
        <active>true</active>
        <businessProcess>New Case Support</businessProcess>
        <label>Adjuster Transfer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Assigned_Case</fullName>
        <active>true</active>
        <businessProcess>Assigned Case Support</businessProcess>
        <label>Assigned Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Claim_Submission</fullName>
        <active>true</active>
        <businessProcess>New Case Support</businessProcess>
        <label>Claim Submission</label>
    </recordTypes>
    <recordTypes>
        <fullName>Closed_Case</fullName>
        <active>true</active>
        <businessProcess>Assigned Case Support</businessProcess>
        <label>Closed Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Furniture_Request</fullName>
        <active>true</active>
        <businessProcess>Assigned Case Support</businessProcess>
        <label>Furniture Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hotel_Extension</fullName>
        <active>true</active>
        <businessProcess>New Case Support</businessProcess>
        <label>Hotel Extension</label>
    </recordTypes>
    <recordTypes>
        <fullName>Housing_Extension</fullName>
        <active>true</active>
        <businessProcess>New Case Support</businessProcess>
        <label>Housing Extension</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Case</fullName>
        <active>true</active>
        <businessProcess>New Case Support</businessProcess>
        <label>New Case</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Cannot_Edit_Closed_Case</fullName>
        <active>true</active>
        <description>Cannot edit a closed case</description>
        <errorConditionFormula>RecordType.DeveloperName = &apos;Closed_Case&apos;</errorConditionFormula>
        <errorMessage>You cannot edit Closed Cases</errorMessage>
    </validationRules>
</CustomObject>